Fix 'Clickable elements too close together' ('More' button)

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -85,6 +85,7 @@ button.link {
 
 .more {
     text-align: right;
+    margin-top: 2rem;
 }
 
 .langs {
